# mimo-free5GRAN

./: Readme.md
mimo/: CMakeLists.txt  README.md
mimo/lib/: free5gran_utils.cpp  free5gran_utils.h
mimo/lib/avx/: avx_ops.h
mimo/lib/usrp/: usrp.cpp  usrp.h  usrp_b210.cpp  usrp_b210.h  usrp_x300.cpp  usrp_x300.h
mimo/lib/utils/channel_estimation/: channel_estimation.cpp  channel_estimation.h
mimo/lib/utils/channel_mapping/: channel_mapping.cpp  channel_mapping.h
mimo/lib/utils/mimo/: mimo.cpp  mimo.h  transmit_diversity.cpp  transmit_diversity.h  vblast.cpp  vblast.h
mimo/lib/variables/: variables.cpp  variables.h
mimo/plots_exports/: analyse.py  cout.rtf  scp_logfile_example.sh  scp_results_example.sh
mimo/plots_exports/vblast/: decoded_grid_qrd_col_norm_frame7.txt  decoded_grid_qrd_no_reordering_frame7.txt  equalized_grid_qrd_no_reordering_frame7.txt  sync_rx1_frame7.txt  sync_rx2_frame7.txt  sync_rx3_frame7.txt  sync_rx4_frame7.txt  tx1.txt  tx1_grid.txt  tx1_rx1_frame7_coefs.txt  tx1_rx1_frame7_pilots.txt  tx1_rx2_frame7_coefs.txt  tx1_rx2_frame7_pilots.txt  tx1_rx3_frame7_coefs.txt  tx1_rx3_frame7_pilots.txt  tx1_rx4_frame7_coefs.txt  tx1_rx4_frame7_pilots.txt  tx2.txt  tx2_grid.txt  tx2_rx1_frame7_coefs.txt  tx2_rx1_frame7_pilots.txt  tx2_rx2_frame7_coefs.txt  tx2_rx2_frame7_pilots.txt  tx2_rx3_frame7_coefs.txt  tx2_rx3_frame7_pilots.txt  tx2_rx4_frame7_coefs.txt  tx2_rx4_frame7_pilots.txt  tx3.txt  tx3_grid.txt  tx3_rx1_frame7_coefs.txt  tx3_rx1_frame7_pilots.txt  tx3_rx2_frame7_coefs.txt  tx3_rx2_frame7_pilots.txt  tx3_rx3_frame7_coefs.txt  tx3_rx3_frame7_pilots.txt  tx3_rx4_frame7_coefs.txt  tx3_rx4_frame7_pilots.txt  tx4.txt  tx4_grid.txt  tx4_rx1_frame7_coefs.txt  (+7 more)
mimo/tx_rx/avx512/: main.cpp
mimo/tx_rx/x300/: main.cpp
mimo/tx_rx/x300/multisim/: main.cpp
